--- a/app/src/main/res/layout/activity_detail_two.xml
+++ b/app/src/main/res/layout/activity_detail_two.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/fondoMotored"
     tools:context="com.movil.summmit.motorresapp.DetailTwoActivity">
 
     <LinearLayout
@@ -223,6 +224,7 @@
                         android:layout_height="match_parent" >
 
                         <ListView
+
                             android:id="@+id/listDiagnostico"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content">
@@ -265,6 +267,7 @@
     </LinearLayout>
 
     <TextView
+        style="@style/text_style"
         android:textSize="20sp"
         android:layout_gravity="center"
         android:layout_width="wrap_content"
