--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,7 @@
     <color name="colorAccent">#312e2e</color>
     <color name="colorMotoredTop">#312e2e</color>
     <color name="colorMotoredSpinner">#dc0909</color>
+    <color name="fondoMotored">#6d6a69</color>
+    <color name="noUnderline">#00000000</color>
+    <color name="colorTexto">#ffffffff</color>
 </resources>
