--- a/app/src/main/res/drawable/gradient_spinner.xml
+++ b/app/src/main/res/drawable/gradient_spinner.xml
@@ -3,13 +3,13 @@
 
     <item><layer-list>
         <item><shape>
-            <gradient android:angle="90" android:endColor="#bc1f2c" android:startColor="#E8EBEF" android:type="linear" />
+            <gradient android:angle="90" android:endColor="#fb3c4a" android:startColor="#c1363d" android:type="linear" />
 
 
 
             <corners android:radius="4dp" />
 
-            <padding android:bottom="3dp" android:left="3dp" android:right="3dp" android:top="3dp" />
+            <padding android:bottom="7dp" android:left="3dp" android:right="3dp" android:top="3dp" />
         </shape></item>
         <item ><bitmap android:gravity="bottom|right" android:src="@drawable/spinner_arrow" android:height="1dp" android:width="1dp"/>
         </item>
