--- a/app/src/main/res/layout/activity_adjuntos.xml
+++ b/app/src/main/res/layout/activity_adjuntos.xml
@@ -6,7 +6,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.movil.summmit.motorresapp.AdjuntosActivity">
+    android:background="@color/fondoMotored"
+    tools:context="com.movil.summmit.motorresapp.AdjuntosActivity"
+    android:descendantFocusability="beforeDescendants"
+    android:focusableInTouchMode="true"
+    >
 
     <LinearLayout
         android:orientation="horizontal"
@@ -19,14 +23,16 @@
             android:layout_height="10dp"/>
 
      <TextView
+         style="@style/text_style"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="17dp"
          android:text="Adjuntar VIN"/>
+
         <View
             android:layout_width="wrap_content"
-            android:layout_weight="1"
-            android:layout_height="10dp"/>
+            android:layout_height="10dp"
+            android:layout_weight="1" />
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/tmpVin"
@@ -34,11 +40,12 @@
             android:layout_height="wrap_content"
             android:background="@drawable/border_edittext">
             <EditText
+                android:backgroundTint="@color/noUnderline"
                 android:id="@+id/edtVin"
                 android:textSize="10sp"
                 android:layout_marginLeft="5dp"
                 android:hint="Seleccione file.."
-
+                android:editable="false"
                 android:layout_width="180dp"
                 android:layout_height="wrap_content" />
         </android.support.design.widget.TextInputLayout>
@@ -60,6 +67,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="17dp"
+            style="@style/text_style"
             android:text="Adjuntar Km/Horas"/>
         <View
             android:layout_width="wrap_content"
@@ -73,6 +81,8 @@
             android:background="@drawable/border_edittext">
 
             <EditText
+                android:backgroundTint="@color/noUnderline"
+                android:editable="false"
                 android:id="@+id/edtKmHoras"
                 android:textSize="10sp"
                 android:layout_marginLeft="5dp"
