--- a/app/src/main/res/layout/activity_detalle_causa_analisis_falla.xml
+++ b/app/src/main/res/layout/activity_detalle_causa_analisis_falla.xml
@@ -7,6 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:statusBarColor="@color/cardview_dark_background"
+    android:background="@color/fondoMotored"
     tools:context="com.movil.summmit.motorresapp.DetalleCausaAnalisisFallaActivity">
 
 
@@ -18,6 +19,9 @@
         android:orientation="vertical"
         android:padding="10dp">
         <Button
+            android:background="@drawable/button_motored"
+            android:textColor="#ffffff"
+            android:textStyle="bold"
             android:id="@+id/btnSavedTecnicos"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -60,7 +64,15 @@
 
 
     </LinearLayout>
-
+    <EditText
+        android:id="@+id/eT1"
+        android:layout_width="1dp"
+        android:layout_height="1dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:background="#00000000"
+        android:cursorVisible="false"
+        android:ems="10" />
     <LinearLayout
         android:orientation="vertical"
 
@@ -79,15 +91,20 @@
             android:layout_height="wrap_content">
 
 
-
             <EditText
+                android:editable="false"
                 android:id="@+id/edtTecnicos"
                 android:layout_width="300dp"
-                android:layout_height="27dp"
-                android:background="@drawable/border"
+                android:layout_height="60dp"
+                android:background="@drawable/border_edittext"
                 android:hint="Seleccione tecnicos"
                 android:inputType="none"
                 android:textSize="10sp" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="1dp"/>
 
 
             <!--    <Spinner
@@ -98,90 +115,109 @@
         </android.support.design.widget.TextInputLayout>
 
     </LinearLayout>
+    <View
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="1dp"/>
 
     <LinearLayout
+        android:layout_width="384dp"
+        android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_marginLeft="-10dp">
 
         <LinearLayout
-
-            android:orientation="vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_marginLeft="-15dp"
+            android:layout_width="141dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
             </android.support.design.widget.TextInputLayout>
-            <TextView
 
-                android:layout_width="wrap_content"
+            <TextView
+                style="@style/text_style"
+                android:layout_width="110dp"
                 android:layout_height="wrap_content"
-                android:text="Sistema Falla:"/>
+                android:text="Sistema Falla:" />
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/tmpSistemaFalla"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                >
+                android:layout_marginLeft="-10dp">
+
                 <Spinner
                     android:id="@+id/spnSistemaFalla"
-                    android:layout_width="130dp"
-                    android:layout_height="wrap_content"
-                    
-                    ></Spinner>
+                    style="@style/spinner_style"
+                    android:layout_width="135dp"
+                    android:layout_height="45dp"></Spinner>
             </android.support.design.widget.TextInputLayout>
-
 
 
         </LinearLayout>
 
         <LinearLayout
-            android:layout_marginLeft="5dp"
-            android:orientation="vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_width="136dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="-5dp"
+            android:orientation="vertical">
 
             <TextView
+                android:layout_marginLeft="3dp"
+                style="@style/text_style"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="Modo Falla:" />
 
-                android:text="Modo Falla:"/>
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/tmpModoFalla"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="-7dp"
+                >
+
                 <Spinner
-                    
                     android:id="@+id/spnModoFalla"
+                    style="@style/spinner_style"
                     android:layout_width="130dp"
-                    android:layout_height="wrap_content"></Spinner>
+                    android:layout_height="45dp"></Spinner>
             </android.support.design.widget.TextInputLayout>
 
 
         </LinearLayout>
 
+
         <LinearLayout
-            android:layout_marginLeft="5dp"
-
-
-            android:orientation="vertical"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+
+
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:orientation="vertical">
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:layout_weight="1" />
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/tmpNrcaso"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp">
+
 
                 <EditText
+
                     android:id="@+id/nrcaso"
-                    android:layout_width="100dp"
+                    android:layout_width="67dp"
                     android:layout_height="45dp"
-                    android:background="@drawable/border"
+                    android:background="@drawable/border_edittext"
                     android:hint="# caso"
                     android:inputType="none" />
             </android.support.design.widget.TextInputLayout>
@@ -198,6 +234,7 @@
         android:layout_height="wrap_content">
 
         <CheckBox
+            style="@style/text_style"
             android:id="@+id/chkScanner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -218,6 +255,7 @@
                 android:background="@drawable/border_edittext"
                 android:layout_height="36dp"
                 android:layout_marginLeft="5dp"
+                android:editable="false"
                 android:hint="Seleccione file.."
                 android:textSize="10sp" />
 
@@ -232,6 +270,7 @@
         android:layout_height="wrap_content">
 
         <CheckBox
+            style="@style/text_style"
             android:id="@+id/chkAceite"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -253,6 +292,7 @@
                 android:layout_height="36dp"
                 android:hint="Seleccione file.."
                 android:textSize="10sp"
+                android:editable="false"
                 android:layout_width="170dp"
                 />
         </android.support.design.widget.TextInputLayout>
@@ -267,6 +307,7 @@
         android:layout_height="wrap_content">
 
         <CheckBox
+            style="@style/text_style"
             android:id="@+id/chkCombustible"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -287,6 +328,7 @@
                 android:layout_marginLeft="5dp"
                 android:hint="Seleccione file.."
                 android:textSize="10sp"
+                android:editable="false"
                 android:layout_width="170dp"
                 android:background="@drawable/border_edittext"
                 android:layout_height="36dp" />
@@ -347,6 +389,7 @@
                             android:inputType="textMultiLine"/>
                     </LinearLayout>
                     <ListView
+
                         android:id="@+id/listDiagnostico"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
@@ -366,6 +409,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                         <Button
+                            android:background="@drawable/button_motored"
+                            android:textColor="#ffffff"
+                            android:textStyle="bold"
                             android:id="@+id/btnCausaFalla"
                             android:text="Agregar"
                             android:layout_width="wrap_content"
@@ -401,6 +447,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                         <Button
+                            android:background="@drawable/button_motored"
+                            android:textColor="#ffffff"
+                            android:textStyle="bold"
                             android:id="@+id/btnTrabajocorrec"
                             android:text="Agregar"
                             android:layout_width="wrap_content"
