--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,6 +4,7 @@ xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
+    android:background="@color/fondoMotored"
 >
 <ImageView
     android:layout_width="200dp"
@@ -34,7 +35,7 @@ android:layout_height="match_parent"
             android:background="@drawable/border_edittext"
 >
             <EditText
-
+                android:backgroundTint="@color/noUnderline"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
@@ -65,6 +66,7 @@ android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:layout_height="1dp"/>
             <EditText
+                android:backgroundTint="@color/noUnderline"
                 android:id="@+id/etePassword"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
