--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -2,18 +2,19 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:id="@+id/container"
+
     android:layout_height="match_parent"
     android:background="#FFFFFF">
 
 
     <ImageView
+        android:id="@+id/iviLogo"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         android:adjustViewBounds="true"
-        android:src="@drawable/logo"
-        android:id="@+id/iviLogo" />
+        android:src="@drawable/logo" />
 
 
 
