--- a/app/src/main/res/layout/item_lista_tecnicos.xml
+++ b/app/src/main/res/layout/item_lista_tecnicos.xml
@@ -3,6 +3,7 @@
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:padding="10dp"
+    android:background="@color/fondoMotored"
     android:layout_height="match_parent">
 
     <LinearLayout
@@ -11,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <TextView
+            style="@style/text_style"
             android:textSize="23sp"
             android:id="@+id/txvTecnico"
             android:layout_width="170dp"
