--- a/app/src/main/res/layout/layout_dialog_casostecnico.xml
+++ b/app/src/main/res/layout/layout_dialog_casostecnico.xml
@@ -2,6 +2,7 @@
 <LinearLayout
     android:padding="5dp"
     android:orientation="vertical"
+    android:background="@color/fondoMotored"
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -14,6 +15,7 @@
         android:clipToPadding="false"
         android:overScrollMode="never" />-->
     <ListView
+
         android:id="@+id/milista"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"></ListView>
