--- a/app/src/main/res/layout/layout_dialog_detallecausa_falla.xml
+++ b/app/src/main/res/layout/layout_dialog_detallecausa_falla.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:background="@color/fondoMotored"
     android:layout_height="match_parent">
 
     <LinearLayout
@@ -20,7 +21,7 @@
             android:layout_height="wrap_content"
             android:text="Tecnicos:"/>
         <Spinner
-
+            style="@style/spinner_style"
             android:entries="@array/opciones_arrays"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"></Spinner>
@@ -47,6 +48,7 @@
             android:text="Sistema Falla:"/>
 
         <Spinner
+            style="@style/spinner_style"
             android:entries="@array/opciones_arrays"
             android:layout_width="130dp"
             android:layout_height="wrap_content"></Spinner>
@@ -66,6 +68,7 @@
                 android:text="Modo Falla:"/>
 
             <Spinner
+                style="@style/spinner_style"
                 android:entries="@array/opciones_arrays"
                 android:layout_width="130dp"
                 android:layout_height="wrap_content"></Spinner>
@@ -84,9 +87,9 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="44dp"
                 android:layout_height="wrap_content"
-                android:text="Nro. Caso:"/>
+                android:text="Nro. Caso:" />
 
             <EditText
                 android:layout_width="130dp"
@@ -109,6 +112,7 @@
         android:layout_height="wrap_content">
 
         <CheckBox
+            style="@style/text_style"
             android:text="Uso Scanner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
@@ -118,6 +122,7 @@
             android:layout_height="1dp"/>
 
         <EditText
+            style="@style/text_style"
             android:layout_marginLeft="5dp"
             android:hint="Seleccione file.."
             android:layout_width="170dp"
@@ -132,6 +137,7 @@
         android:layout_height="wrap_content">
 
         <CheckBox
+            style="@style/text_style"
             android:text="Muestra aceite"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
@@ -140,6 +146,7 @@
             android:layout_height="1dp"
             android:layout_weight="1" />
         <EditText
+            style="@style/text_style"
             android:layout_marginLeft="5dp"
             android:hint="Seleccione file.."
             android:layout_width="170dp"
@@ -154,6 +161,7 @@
         android:layout_height="wrap_content">
 
         <CheckBox
+            style="@style/text_style"
             android:text="Muestra Combustible"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
@@ -163,6 +171,7 @@
             android:layout_weight="1" />
 
         <EditText
+            style="@style/text_style"
             android:layout_marginLeft="5dp"
             android:hint="Seleccione file.."
             android:layout_width="170dp"
@@ -217,6 +226,7 @@
                             android:inputType="textMultiLine"/>
                     </LinearLayout>
                     <ListView
+
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
 
