--- a/app/src/main/res/layout/layout_dialog_tecnicos.xml
+++ b/app/src/main/res/layout/layout_dialog_tecnicos.xml
@@ -3,17 +3,19 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:orientation="vertical"
     android:padding="10dp"
+    android:background="@color/fondoMotored"
     android:layout_height="match_parent">
 
     <TextView
-        android:textColor="@color/vw_BgRv"
         android:textSize="23sp"
         android:layout_gravity="center"
+        style="@style/text_style"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Seleccione Tecnicos"/>
 
     <ListView
+
         android:id="@+id/lstTecnicos"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
