--- a/app/src/main/res/layout/row_lista_tecnicos.xml
+++ b/app/src/main/res/layout/row_lista_tecnicos.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="50dp">
+    android:layout_height="50dp"
+    android:background="@color/fondoMotored">
 
 
     <TextView
+        style="@style/text_style"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/tv_user_name"
