--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,7 +20,13 @@
         <item name="android:paddingRight">20dp</item>
         <item name="android:paddingTop">5dp</item>
         <item name="android:paddingBottom">5dp</item>
-        <item name="android:popupBackground">#dfde1212</item>
+        <item name="android:popupBackground">#fb3c4a</item>
     </style>
+    <style name="text_style">
+        <item name="android:textColor">#DFFFFFFF</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+
 
 </resources>
