--- a/app/src/main/res/layout/activity_lista_informes.xml
+++ b/app/src/main/res/layout/activity_lista_informes.xml
@@ -9,43 +9,46 @@
     tools:context="com.movil.summmit.motorresapp.ListaInformesActivity">
 
     <LinearLayout
-        android:padding="3dp"
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_centerInParent="true">
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:orientation="vertical"
+        android:padding="3dp">
 
         <LinearLayout
-            android:padding="5dp"
             android:layout_width="wrap_content"
+            android:layout_height="102dp"
+            android:gravity="center"
             android:orientation="horizontal"
-            android:layout_height="wrap_content"
-            android:gravity="center">
+            android:padding="5dp">
 
             <LinearLayout
-                android:layout_width="173dp"
-                android:layout_height="wrap_content"
+                android:layout_width="175dp"
+                android:layout_height="100dp"
+
                 android:gravity="center"
                 android:orientation="vertical">
 
                 <TextView
-
                     style="@style/text_style"
                     android:layout_width="wrap_content"
+
                     android:layout_height="wrap_content"
-                    android:text="EMPRESA"
-                    />
+                    android:text="EMPRESA" />
 
                 <Spinner
-                    style="@style/spinner_style"
                     android:id="@+id/spnEmpresa"
+                    style="@style/spinner_style"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"></Spinner>
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"></Spinner>
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="173dp"
-                android:layout_height="wrap_content"
+                android:layout_width="175dp"
+                android:layout_height="100dp"
+
                 android:layout_marginLeft="4dp"
                 android:gravity="center"
                 android:orientation="vertical">
@@ -57,25 +60,27 @@
                     android:text="SUCURSAL" />
 
                 <Spinner
-                    style="@style/spinner_style"
                     android:id="@+id/spnSucursal"
+                    style="@style/spinner_style"
                     android:layout_width="151dp"
-                    android:layout_height="wrap_content"></Spinner>
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"></Spinner>
             </LinearLayout>
 
         </LinearLayout>
 
 
         <LinearLayout
-            android:layout_width="362dp"
-            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_height="94dp"
             android:gravity="center"
             android:orientation="horizontal"
             android:padding="5dp">
 
             <LinearLayout
-                android:layout_width="171dp"
-                android:layout_height="wrap_content"
+                android:layout_width="175dp"
+                android:layout_height="89dp"
+                android:layout_marginBottom="10dp"
                 android:gravity="center"
                 android:orientation="vertical">
 
@@ -94,7 +99,8 @@
 
             <LinearLayout
                 android:layout_width="175dp"
-                android:layout_height="wrap_content"
+                android:layout_height="89dp"
+                android:layout_marginBottom="10dp"
                 android:layout_marginLeft="4dp"
                 android:gravity="center"
                 android:orientation="vertical">
@@ -116,15 +122,17 @@
 
 
         <LinearLayout
-            android:padding="5dp"
             android:layout_width="wrap_content"
-            android:orientation="horizontal"
             android:layout_height="wrap_content"
-            android:gravity="center">
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:padding="5dp">
 
             <LinearLayout
-                android:layout_width="176dp"
-                android:layout_height="wrap_content"
+                android:layout_width="175dp"
+                android:layout_height="89dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="-3dp"
                 android:gravity="center"
                 android:orientation="vertical">
 
@@ -135,31 +143,32 @@
                     android:text="MODELO" />
 
                 <Spinner
-                    style="@style/spinner_style"
                     android:id="@+id/spnModelo"
+                    style="@style/spinner_style"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"></Spinner>
             </LinearLayout>
 
             <Button
-                android:background="@drawable/button_motored"
-                android:textColor="#ffffff"
-                android:textStyle="bold"
+
                 android:id="@+id/btnBuscar"
-                android:layout_marginLeft="40dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="BUSCAR"/>
+                android:layout_marginLeft="50dp"
+                android:background="@drawable/button_motored"
+                android:text="BUSCAR"
+                android:textColor="#ffffff"
+                android:textStyle="bold" />
 
 
         </LinearLayout>
 
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="20dp">
+            android:layout_marginTop="20dp"
+            android:orientation="vertical">
             <!--  <ListView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
@@ -168,9 +177,9 @@
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
+                android:layout_height="222dp"
                 android:clipToPadding="false"
+                android:orientation="horizontal"
                 android:overScrollMode="never" />
 
         </LinearLayout>
