--- a/app/src/main/res/layout/row_lista_informe.xml
+++ b/app/src/main/res/layout/row_lista_informe.xml
@@ -10,6 +10,7 @@
     android:background="?android:attr/selectableItemBackground">
 
     <LinearLayout
+        android:background="@drawable/button_motored"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -21,6 +22,7 @@
             android:layout_height="wrap_content">
 
             <TextView
+                android:textColor="#ffffff"
                 android:id="@+id/cliente"
                 android:textSize="16sp"
                 android:textStyle="bold"
@@ -29,6 +31,7 @@
                 tools:text="Robert Lewandowski"/>
 
             <TextView
+                android:textColor="#ffffff"
                 android:id="@+id/fecha"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -43,6 +46,7 @@
             android:layout_height="wrap_content">
 
             <TextView
+                android:textColor="#ffffff"
                 android:id="@+id/sucursal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -56,17 +60,21 @@
             android:layout_height="wrap_content">
 
             <TextView
+                android:textColor="#ffffff"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Modelo: "/>
 
             <TextView
+
+                android:textColor="#ffffff"
                 android:id="@+id/modelo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 tools:text="CG232"/>
 
             <TextView
+                android:textColor="#ffffff"
                 android:id="@+id/estado"
                 android:textSize="20sp"
                 android:layout_width="match_parent"
